# obs-studio

cmake/Modules/: FindLibevent.cmake  Findlibcamera.cmake
plugins/: CMakeLists.txt
plugins/linux-libcamera/: CMakeLists.txt  event_loop.cpp  event_loop.h  libcamera-input.cpp  libcamera-src-manager.cpp  libcamera-src-manager.h  libcamera-src.cpp  libcamera-src.h  linux-libcamera.c
